# docs/backend/openapi.yaml
@@ -4935,7 +4935,7 @@ paths:
             schema:
               $ref: "#/components/schemas/RequestSupplyUnitReconfigure"
       responses:
-        200:
+        202:
           description: 成功
           content:
             application/json:
@@ -5011,7 +5011,7 @@ paths:
             schema:
               $ref: "#/components/schemas/RequestConfigBatchCreate"
       responses:
-        200:
+        201:
           description: 成功
           content:
             application/json:
@@ -5023,7 +5023,7 @@ paths:
                       data:
                         $ref: "#/components/schemas/ConfigBatch"
         4XX:
-          description: 业务失败：E-1601
+          description: 业务失败：E-1001,E-1601
           content:
             application/json:
               schema:
@@ -5070,7 +5070,14 @@ paths:
                   - type: object
                     properties:
                       data:
-                        $ref: "#/components/schemas/ConfigBatch"
+                        allOf:
+                          - $ref: "#/components/schemas/PageMeta"
+                          - type: object
+                            properties:
+                              items:
+                                type: array
+                                items:
+                                  $ref: "#/components/schemas/ConfigBatch"
   /admin/config-batches/{batchId}:
     get:
       operationId: ADM-CB03
@@ -5104,7 +5111,7 @@ paths:
                       data:
                         $ref: "#/components/schemas/ConfigBatch"
         4XX:
-          description: 业务失败：E-1406
+          description: 业务失败：E-1001,E-1406
           content:
             application/json:
               schema:
@@ -5135,7 +5142,7 @@ paths:
           schema:
             type: string
       responses:
-        200:
+        202:
           description: 成功
           content:
             application/json:
@@ -5147,7 +5154,7 @@ paths:
                       data:
                         $ref: "#/components/schemas/ConfigBatchItem"
         4XX:
-          description: 业务失败：E-1406,E-1601
+          description: 业务失败：E-1001,E-1406,E-1601
           content:
             application/json:
               schema:
@@ -5184,7 +5191,7 @@ paths:
             schema:
               $ref: "#/components/schemas/RequestConfigBatchRollback"
       responses:
-        200:
+        202:
           description: 成功
           content:
             application/json:
@@ -5196,7 +5203,7 @@ paths:
                       data:
                         $ref: "#/components/schemas/ConfigBatchItem"
         4XX:
-          description: 业务失败：E-1406,E-1601
+          description: 业务失败：E-1001,E-1406,E-1601
           content:
             application/json:
               schema:
